[OID4VCI] User-editable did attribute used as credential subject with realm-local uniqueness only
Closes #50524

Signed-off-by: Thomas Diesler <tdiesler@proton.me>
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

Remove DID-specific support from OID4VCI, treating the subject identifier as a plain user attribute with realm-local uniqueness only.

  Deleted (bulk of the change — 497 lines removed):

  - DIDUtils.java — Entire utility class for DID encoding/decoding (did:key for P-256/ES256, multibase/multicodec/base58btc). Gone.
  - DuplicateDidValidator.java — Custom validator that enforced DID-format uniqueness on user attributes. Gone.
  - OID4VCUserDidAttributeTest.java — Tests for the DID user attribute behavior. Gone.
  - ValidatorFactory SPI entry — Removed the DuplicateDidValidator service registration.

  Modified:

  - OID4VCConstants.java — Removed the comment "Would in most cases be the subject's DID" from the CLAIM_NAME_SUBJECT_ID constant.
  - DeclarativeUserProfileProviderFactory.java — Removed the automatic registration of a did user attribute with the DuplicateDidValidator. The factory no longer
  injects DID-specific profile configuration.
  - OID4VCLoginProtocolFactory.java — Changed the subject ID mapper from did to subjectId as the mapped user attribute.
  - OID4VCSubjectIdMapper.java — Same rename: reads subjectId attribute instead of did.
  - UserModel.java — Removed the ATTR_DID constant.
  - Test files — Updated tests to use subjectId instead of did, removed DID-specific test scenarios.

  In essence:

  The credential subject identifier is no longer assumed to be a DID. It's now a generic subjectId user attribute with no special format validation — just realm-local
  uniqueness via standard mechanisms.